# xv6

./: .gitignore  Dockerfile  Makefile  Taskfile.yaml  asm.hpp  bio.c  bio.cpp  bootasm.S  bootmain.c  bootmain.cpp  buf.hpp  cat.cpp  cflags.txt  console.c  console.cpp  defs.h  defs.hpp  echo.c  elf.hpp  entry.S  entryother.S  exec.c  exec.cpp  file.c  file.cpp  file.h  file.hpp  forktest.c  fs.c  fs.cpp  fs.h  fs.hpp  grep.c  ide.c  ide.cpp  init.c  init.cpp  initcode.S  ioapic.c  ioapic.cpp  (+83 more)
uprogs/: CMakeLists.txt  echo.cpp  forktest.cpp  grep.cpp  rm.cpp  sh.cpp  wc.cpp
uprogs/lib/: ulib.cpp  umalloc.cpp  user.hpp  usys.S
